--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Favicon: prefer SVG in public/ (placeholder.svg). Browsers that support SVG favicons will use this. -->
+    <link rel="icon" href="/placeholder.svg" type="image/svg+xml" />
   </head>
 
   <body>
